V0.9 Commentary and Readme.md completed