@@ -2,20 +2,32 @@ a. Project information: short textual description of your project, and at least 
 of your application running.
 CSCI2020U Assignment 1
 Member: Zikun Fu (100742730)
-Member 2: Chen Yang (100742300)
-
+        Chen Yang (100742300)
+Screenshots of running application:
+Scene1:
+![alt text](https://github.com/ZikunFu/CSCI2020U_Assignment1/src/sample/resources/App_screenshot_1.png)
+Scene2:
+![alt text](https://github.com/ZikunFu/CSCI2020U_Assignment1/src/sample/resources/App_screenshot_2.png)
 b. Improvements: briefly describe the improvements you made to the interface and/or the
 model (if any).
-we made a column called subject to identify the subject in each email.
+    1.Directory Chooser for folder selection.
+    2.CSS for multiple UI elements.
+    3.Export, open file, and open directory functionalities.
+    4.File name inside tableview
+    5.Multiple scenes traverse buttons.
+    6.Button Icons.
 
 c. How to run: step-by-step information on how one can successfully clone and run your
 application.
-1. run the train file to calculate the possibility to for the words in the file is spam or not.
-2. save the possibility in the space that we can save
-3. read the test file and do the same thing
-4. compare the possibility based on the possibility of the train file
-5. get spam or ham.
+    1.Install java jdk-14 or higher version.
+    2.Include javafx-sdk-15.0.1 as library.
+    3.Note: Launching from IDE need to add VM arguments:
+    "--module-path /path/to/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml"
+    4.Launch Main.java.
+    5.Use "Browse" to select Directory "data/test/ham" or "data/test/spam".
 
 d. Other resources: any references to other materials/libraries that you might have used on
 your solution or model improvement
-We are used the part of code from the lecture as the base of the project.
+    WordCounter.java provided by professor Mariana Shimabukuro in canvas.
+    Button Icons from free opensource website
+    Apple button CSS from "https://www.apple.com/ca/"
